objects/GDT_ManageLicense_Purchase__c.object
<CustomObject>
    <fields>
        <fullName>GDT_Purchase_AffiliateGroup__c</fullName>
        <label>Affiliate Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod Ricard</fullName>
                </value>
                <value>
                    <fullName>PR Asia</fullName>
                </value>
                <value>
                    <fullName>PR Chatter</fullName>
                </value>
                <value>
                    <fullName>PR Europe</fullName>
                </value>
                <value>
                    <fullName>PR Holding</fullName>
                </value>
                <value>
                    <fullName>PR Latin America</fullName>
                </value>
                <value>
                    <fullName>PR North America</fullName>
                </value>
                <value>
                    <fullName>ABSOLUT</fullName>
                </value>
                <value>
                    <fullName>CORBY</fullName>
                </value>
                <value>
                    <fullName>RICARD</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Purchase_AppName__c</fullName>
        <label>Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Greatvines</fullName>
                </value>
                <value>
                    <fullName>BMC Remedyforce</fullName>
                </value>
                <value>
                    <fullName>Orchestra CMS</fullName>
                </value>
                <value>
                    <fullName>Cloud Coach Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Purchase_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GDT_Purchase_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDT_Purchase_LicenseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Type</label>
        <referenceTo>GDT_ManageLicense_License__c</referenceTo>
        <relationshipLabel>GDT ManageLicense Purchases</relationshipLabel>
        <relationshipName>GDT_ManageLicense_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDT_Purchase_PurchaseDate__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDT_Purchase_TotalLicenses__c</fullName>
        <label>Total Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GDT ManageLicense Purchase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GDT_Purchase_AffiliateGroup__c</columns>
        <columns>GDT_Purchase_LicenseType__c</columns>
        <columns>GDT_Purchase_TotalLicenses__c</columns>
        <columns>GDT_Purchase_AppName__c</columns>
        <columns>GDT_Purchase_PurchaseDate__c</columns>
        <columns>GDT_Purchase_ExpirationDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P#{0000}</displayFormat>
        <label>GDT Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDT ManageLicense Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>